fix keyboard navigation issues in the file browser

BUG: 240668